--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -92,7 +92,7 @@
         <div >
             <img src="agromind.png" alt="AgoraMind Logo" class="logo">
         </div>
-        <div class>
+        <div>
             <h1>AgoraMind</h1>
             <p>Marketplace of Ideas</p>
         </div>
